Fix list item address alignment

--- a/src/styles/module/_lists.scss
+++ b/src/styles/module/_lists.scss
@@ -28,6 +28,7 @@
     }
 
     &-address {
+        text-align: left;
         font-size: 14px;
         color: #444;
     }
